# cyberops-companion

./: .env.example  .env.production.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Makefile  PLAN_ESTRATEGICO.md  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  run.py  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml  security.yml
apps/api/: Dockerfile  Dockerfile.dev  pytest.ini  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 3fdaec0013d5_add_sso_tables_and_user_sso_fields.py  a1b2c3d4e5f6_add_multi_tenancy_tables.py  b2c3d4e5f6g7_migrate_to_multi_tenancy.py  c3d4e5f6g7h8_add_bsi_grundschutz_tables.py  d4e5f6g7h8i9_add_dora_tables.py  e5f6g7h8i9j0_add_iso27001_tables.py  e6f7g8h9i0j1_add_onboarding_tables.py  f6g7h8i9j0k1_add_bcm_tables.py  f7g8h9i0j1k2_add_evidence_bridge_tables.py  g7h8i9j0k1l2_add_attack_path_tables.py  h8i9j0k1l2m3_add_document_tables.py  i9j0k1l2m3n4_add_awareness_tables.py
apps/api/src/: __init__.py  celery_app.py  config.py  main.py
apps/api/src/api/: deps.py  websocket.py
apps/api/src/core/: __init__.py  rate_limit_config.py  redis.py  scan_progress.py  security.py  tenant_context.py
apps/api/src/db/: __init__.py  database.py  seed.py  seed_bcm.py  seed_bsi.py  seed_iso27001.py
apps/api/src/integrations/: __init__.py  bsi_integration.py  bsi_meldung.py  compliance_hub.py  cross_framework_mapper.py  ioc_enrichment.py  iso_mapper.py  mitre_integration.py  models.py  nis2_directive.py  nis2_models.py  owasp_integration.py
apps/api/src/middleware/: __init__.py  rate_limit_middleware.py  tenant_middleware.py
apps/api/src/models/: __init__.py  attachment.py  attack_paths.py  awareness.py  base.py  bcm.py  bsi_grundschutz.py  checklist.py  cmdb.py  cobit.py  decision.py  documents.py  dora.py  evidence.py  evidence_bridge.py  gdpr.py  incident.py  integrations.py  iso27001.py  kritis.py  mixins.py  nis2.py  nist.py  notifications.py  onboarding.py  organization.py  phase.py  reporting.py  risk.py  soc.py  sso.py  threat_intel.py  tisax.py  tprm.py  user.py  user_management.py  vulnerability.py
apps/api/src/schemas/: __init__.py  analytics.py  attachment.py  attack_paths.py  audit.py  awareness.py  bcm.py  bsi_grundschutz.py  checklist.py  cmdb.py  cobit.py  decision.py  documents.py  dora.py  evidence.py  evidence_bridge.py  gdpr.py  incident.py  integrations.py  iso27001.py  kritis.py  nis2.py  nist.py  notifications.py  onboarding.py  organization.py  phase.py  reporting.py  risk.py  soc.py  sso.py  threat_intel.py  tisax.py  tprm.py  user.py  user_management.py  vulnerability.py
apps/api/src/scripts/: create_admin.py  seed_training.py
apps/api/src/services/: __init__.py  analyst_metrics_service.py  analytics_service.py  attack_path_service.py  audit_service.py  auth_service.py  base_service.py  bcm_service.py  bsi_grundschutz_service.py  bsi_update_service.py  checklist_service.py  cmdb_service.py  cobit_service.py  compliance_service.py  decision_service.py  document_service.py  dora_service.py  email_service.py  evidence_bridge_service.py  evidence_service.py  gdpr_service.py  (+27 more)
apps/api/tests/: __init__.py  conftest.py
apps/web/: Dockerfile  Dockerfile.dev  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/hooks/: index.ts  use-attachments.ts  use-notification-websocket.ts  use-scan-progress-websocket.ts  use-translations.ts  useAnalytics.ts  useKeyboardShortcuts.ts
apps/web/i18n/: translations.ts
apps/web/lib/: api-client.ts  auth.ts  chart-colors.ts  utils.ts
apps/web/stores/: auth-store.ts  incident-store.ts  onboarding-store.ts  tenant-store.ts  ui-store.ts
apps/web/tests/: setup.ts
apps/web/types/: index.ts
config/: __init__.py  settings.py
data/: lessons_learned.json
data/playbooks/: ransomware.json
data/scenarios/: scenarios.json
data/templates/: report_template.md
docs/: ANALYTICS.md  CHANGELOG.md  COMPLIANCE_SOURCES.md  DEPLOY_FREE.md  DOCUMENTACION_COMPLETA.md  ENTERPRISE.md  FUTURE_ROADMAP.md  PROJECT_DOCUMENTATION.md  PROJECT_STATUS.md  README.md  SCANNER_INTEGRATION.md  TESTING_AND_MULTITENANCY.md  UX_PATTERNS.md  bsi-mapping.md  evidence-model.md  nis2-workflow.md
docs/architecture/: OVERVIEW.md
docs/features/: AUDIT_LOGGING.md  BCM.md  CELERY_TASKS.md  DOCUMENT_MANAGEMENT.md  DOCUMENT_MANAGEMENT_STANDARDS.md  EMAIL_SERVICE.md  FILE_UPLOADS.md  I18N_TRANSLATIONS.md  ISO27001.md  LANDING_PAGE.md  MOBILE_RESPONSIVE.md  MULTI_TENANCY.md  NVD_API.md  ONBOARDING.md  RATE_LIMITING.md  ROLE_BASED_ACCESS.md  SECURITY_AWARENESS.md  SSO_SAML.md  WEBSOCKET_NOTIFICATIONS.md
examples/demo-dataset/: README.md
scripts/: deploy.sh  init-db.sql  integrate_enterprise.sh  update.sh
src/: __init__.py  cli.py
src/core/: __init__.py  checklist_manager.py  decision_engine.py  evidence_logger.py  report_generator.py  workflow.py
src/integrations/: __init__.py  bsi_integration.py  bsi_meldung.py  compliance_hub.py  cross_framework_mapper.py  examples.py  ioc_enrichment.py  iso_mapper.py  mitre_integration.py  models.py  nis2_directive.py  nist_integration.py  owasp_integration.py
src/models/: __init__.py  checklist.py  decision.py  evidence.py  incident.py  phase.py
src/simulation/: __init__.py  artifact_generator.py  scenario_runner.py
src/ui/: __init__.py  app.py  bsi_meldung_components.py  communication_templates_components.py  compliance_components.py  components.py  deadline_widgets.py  executive_dashboard_components.py  ioc_enrichment_components.py  keyboard_shortcuts.py  lessons_learned_components.py  mitre_navigator_components.py  playbook_generator_components.py  styles.py
src/utils/: __init__.py  helpers.py  logging_config.py  translations.py
tests/: __init__.py  test_core.py  test_models.py
(+267 files in other folders)
