[project]
name = "cyberops-companion"
version = "2.0.0"
description = "Security Operations & Incident Response Platform - IHK Final Project"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["incident-response", "ransomware", "security", "forensics", "decision-support"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "streamlit>=1.28.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
vm = [
    "paramiko>=3.3.0",  # SSH for VM interaction
]

[project.scripts]
cyberops-companion = "src.cli:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "N", "D", "S", "B"]
ignore = [
    # Docstring rules - too strict for this project
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public function
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D106",  # Missing docstring in public nested class
    "D107",  # Missing docstring in __init__
    "D200",  # One-line docstring should fit on one line
    "D202",  # No blank lines after function docstring
    "D203",  # 1 blank line required before class docstring (conflicts with D211)
    "D204",  # 1 blank line required after class docstring
    "D205",  # 1 blank line required between summary and description
    "D212",  # Multi-line docstring summary on first line (conflicts with D213)
    "D213",  # Multi-line docstring summary on second line (conflicts with D212)
    "D400",  # First line should end with a period
    "D401",  # First line should be in imperative mood
    "D413",  # Missing blank line after last section
    "D415",  # First line should end with period, question mark, or exclamation
    "D417",  # Missing argument descriptions in docstring
    # Style rules
    "E402",  # Module level import not at top of file
    "E501",  # Line too long - many lines slightly over limit
    "E712",  # Comparison to True/False - sometimes more readable
    "E722",  # Bare except - sometimes intentional
    "E741",  # Ambiguous variable name
    "W293",  # Blank line contains whitespace
    # Code quality rules - relax for now
    "B007",  # Loop control variable not used within loop body
    "B904",  # Within except clause, raise exceptions with `from`
    "B008",  # Function call in default argument - FastAPI pattern
    "N805",  # First argument of method should be named self
    "F401",  # Unused imports - need cleanup separately
    "F541",  # f-string without placeholders
    "F841",  # Local variable is assigned but never used
    # Security rules - false positives
    "S101",  # Use of assert detected - common in tests
    "S105",  # Hardcoded password - false positives on variable names
    "S106",  # Hardcoded password - false positives on parameter names
    "S107",  # Possible hardcoded password in function default
    "S110",  # try-except-pass - sometimes intentional
    "S311",  # Standard pseudo-random generators - OK for non-crypto uses
    "S324",  # Insecure hash functions (MD5) - used for file checksums not security
]
# Disabled rules:
# - I (isort): Import sorting - would require extensive refactoring
# - UP (pyupgrade): Python upgrade suggestions - too many Optional -> X | None changes
# - F401: Unused imports - need to clean up separately

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
